minor tweaks to HMC

--- a/notebooks/VAE_MCMC.ipynb
+++ b/notebooks/VAE_MCMC.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3046a523",
+   "id": "c1e0f119",
    "metadata": {},
    "source": [
     "## Saving new parameters"
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "id": "7a8401be",
    "metadata": {},
    "outputs": [],
@@ -497,25 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "c404a7ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hidden_dim = 28\n",
-    "net2 = VAE_MCMC(hidden_dim)\n",
-    "num_epochs = 5\n",
-    "log_interval = 50\n",
-    "history = {'train':[], 'test':[]}\n",
-    "eps = torch.ones(hidden_dim) # initial step size as a vector for each parameter\n",
-    "# has to depend on t?\n",
-    "lr=0.001\n",
-    "M=10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 80,
    "id": "7b6e03a2",
    "metadata": {},
    "outputs": [],
@@ -530,18 +512,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 78,
    "id": "aca1a134",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-78-6badd62112ea>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-78-6badd62112ea>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    for i in range(L):r = r + 0.5 * epsilon *# grad_U(z))\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def HMC(current_z, x, epsilon, L, U, grad_U): # U(z) = -logp(z,x)\n",
     "    z = current_z\n",
     "    r = torch.randn_like(z)\n",
     "    current_r = r\n",
-    "    for i in range(L):r = r + 0.5 * torch.dot(epsilon,# grad_U(z))\n",
-    "        z = z + torch.dot(epsilon, r)\n",
-    "        r = r + 0.5 * torch.dot(epsilon,# grad_U(z))\n",
+    "    for i in range(L):\n",
+    "        grad = loss2(z,x)\n",
+    "        loss2.backward()\n",
+    "        r = r + 0.5 * epsilon *# grad_U(z))\n",
+    "        z = z + epsilon * r\n",
+    "        r = r + 0.5 * epsilon * # grad_U(z))\n",
     "                                \n",
     "    current_U = U(current_z) # log_prob(current_z)\n",
     "    current_K = torch.sum(current_r**2) / 2\n",
@@ -558,12 +552,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 79,
    "id": "e91a8ffd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc741c64cf0e425898c37b7c23abc037",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/3000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'HMC' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-79-58b9fb7ddfe1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[0mM\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-79-58b9fb7ddfe1>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(epoch, eps)\u001b[0m\n\u001b[0;32m     20\u001b[0m                     \u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m             \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHMC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_U\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlog_var\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'HMC' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "def train(epoch):\n",
+    "def train(epoch,eps):\n",
     "    net2.train()\n",
     "    running_loss = 0\n",
     "    L = int(torch.linalg.norm(eps).item()) # leapfrog steps for HMC\n",
@@ -574,7 +595,7 @@
     "        loss = loss_fn(mu, log_var, x_out, data)\n",
     "        loss.backward()\n",
     "        \n",
-    "        eps = torch.dot(eps, torch.exp(log_var))\n",
+    "        eps = eps * torch.exp(log_var)\n",
     "        \n",
     "        with torch.no_grad():\n",
     "            for l in net2.encoder:\n",
@@ -584,7 +605,7 @@
     "                    l.weight.grad.zero_()\n",
     "                    l.bias.grad.zero_()\n",
     "        for m in range(M):\n",
-    "            z = HMC(z, x, epsilon, L, U, grad_U)\n",
+    "            z = HMC(z, x, eps, L, U, grad_U)\n",
     "            \n",
     "        loss = loss_fn(mu, log_var, z, data)\n",
     "        loss.backward()\n",
@@ -611,8 +632,16 @@
     "    print(\"===> Test set loss: {:.4f}\".format(running_loss/len(testloader.dataset)))\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "    hidden_dim = 28\n",
+    "    net2 = VAE_MCMC(hidden_dim)\n",
+    "    num_epochs = 5\n",
+    "    log_interval = 50\n",
+    "    history = {'train':[], 'test':[]}\n",
+    "    eps = torch.ones(hidden_dim)\n",
+    "    lr=0.001\n",
+    "    M=10\n",
     "    for epoch in range(1, num_epochs+1):\n",
-    "        train(epoch)\n",
+    "        train(epoch,eps)\n",
     "        test(epoch)\n",
     "        with torch.no_grad():\n",
     "            sample = torch.randn(64, hidden_dim) # 'output' of the bottleneck\n",
@@ -669,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac9f6ec5",
+   "id": "0b54162b",
    "metadata": {},
    "outputs": [],
    "source": []
