--- a/notebooks/VAE_MCMC.ipynb
+++ b/notebooks/VAE_MCMC.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "id": "ea84e0d0",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "id": "16fbf9f8",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "'cuda:0'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1e0f119",
+   "id": "bcc9b494",
    "metadata": {},
    "source": [
     "## Saving new parameters"
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 97,
    "id": "7a8401be",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 98,
    "id": "7b6e03a2",
    "metadata": {},
    "outputs": [],
@@ -512,16 +512,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 99,
+   "id": "47350000",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std_normal = torch.distributions.Normal(loc=torch.tensor(0., device=device, dtype=torch.float32),\n",
+    "                                       scale=torch.tensor(1., device=device, dtype=torch.float32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "id": "aca1a134",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-78-6badd62112ea>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-103-19740350d05c>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-78-6badd62112ea>\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    for i in range(L):r = r + 0.5 * epsilon *# grad_U(z))\u001b[0m\n\u001b[1;37m                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-103-19740350d05c>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    r = r + 0.5 * epsilon * # grad_U(z)\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -531,11 +542,9 @@
     "    r = torch.randn_like(z)\n",
     "    current_r = r\n",
     "    for i in range(L):\n",
-    "        grad = loss2(z,x)\n",
-    "        loss2.backward()\n",
-    "        r = r + 0.5 * epsilon *# grad_U(z))\n",
+    "        r = r + 0.5 * epsilon * # grad_U(z)\n",
     "        z = z + epsilon * r\n",
-    "        r = r + 0.5 * epsilon * # grad_U(z))\n",
+    "        r = r + 0.5 * epsilon * # grad_U(z)\n",
     "                                \n",
     "    current_U = U(current_z) # log_prob(current_z)\n",
     "    current_K = torch.sum(current_r**2) / 2\n",
@@ -552,42 +561,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 105,
    "id": "e91a8ffd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc741c64cf0e425898c37b7c23abc037",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/3000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'HMC' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-79-58b9fb7ddfe1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[0mM\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_epochs\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m         \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m         \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-79-58b9fb7ddfe1>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(epoch, eps)\u001b[0m\n\u001b[0;32m     20\u001b[0m                     \u001b[0ml\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m             \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mHMC\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0meps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mU\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgrad_U\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mloss_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlog_var\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'HMC' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def train(epoch,eps):\n",
+    "def train(epoch, epsilon):\n",
     "    net2.train()\n",
     "    running_loss = 0\n",
-    "    L = int(torch.linalg.norm(eps).item()) # leapfrog steps for HMC\n",
+    "    L = int(torch.linalg.norm(epsilon).item()) # leapfrog steps for HMC\n",
     "    for batch_idx, (data, _) in enumerate(tqdm_notebook(trainloader)):\n",
     "        mu, log_var, x_out = net2(data) # z\n",
     "        z = net2.reparametrize(mu, log_var)\n",
@@ -595,7 +577,7 @@
     "        loss = loss_fn(mu, log_var, x_out, data)\n",
     "        loss.backward()\n",
     "        \n",
-    "        eps = eps * torch.exp(log_var)\n",
+    "        epsilon = epsilon * torch.exp(log_var)\n",
     "        \n",
     "        with torch.no_grad():\n",
     "            for l in net2.encoder:\n",
@@ -605,12 +587,12 @@
     "                    l.weight.grad.zero_()\n",
     "                    l.bias.grad.zero_()\n",
     "        for m in range(M):\n",
-    "            z = HMC(z, x, eps, L, U, grad_U)\n",
+    "            z = HMC(z, data, epsilon, L)\n",
     "            \n",
     "        loss = loss_fn(mu, log_var, z, data)\n",
     "        loss.backward()\n",
     "        running_loss += loss.item()\n",
-    "        if batch_idx % (log_interval*6) == 0: history['train'].append(loss.item()/len(data))\n",
+    "        if batch_idx % (log_interval*1) == 0: history['train'].append(loss.item()/len(data))\n",
     "        for l in net2.decoder:\n",
     "            if hasattr(l, 'weight'):\n",
     "                l.weight -= l.weight.grad*lr\n",
@@ -637,11 +619,11 @@
     "    num_epochs = 5\n",
     "    log_interval = 50\n",
     "    history = {'train':[], 'test':[]}\n",
-    "    eps = torch.ones(hidden_dim)\n",
+    "    epsilon = torch.ones(hidden_dim)\n",
     "    lr=0.001\n",
-    "    M=10\n",
+    "    M=1000\n",
     "    for epoch in range(1, num_epochs+1):\n",
-    "        train(epoch,eps)\n",
+    "        train(epoch,epsilon)\n",
     "        test(epoch)\n",
     "        with torch.no_grad():\n",
     "            sample = torch.randn(64, hidden_dim) # 'output' of the bottleneck\n",
@@ -698,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b54162b",
+   "id": "3db7fec7",
    "metadata": {},
    "outputs": [],
    "source": []
